--- a/style.css
+++ b/style.css
@@ -48,9 +48,12 @@ body {
     cursor: pointer;
 }
 .button:hover {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
     transform: scale(1.2);
+}
+@media screen and (max-width: 1100px) {
+    .button {
+        padding: 17px 35px;
+    }
 }
 .paragraph {
     font-weight: 700;
@@ -77,8 +80,18 @@ h2 {
     margin-left: auto;
     margin-right: auto;
 }
+@media screen and (max-width: 1200px) {
+    .container {
+        max-width: 90%;
+    }
+}
 .header {
     margin-bottom: 104px;
+}
+@media screen and (max-width: 1150px) {
+    .header--logo img {
+        width: 80%;
+    }
 }
 .header-content {
     display: flex;
@@ -88,11 +101,31 @@ h2 {
     margin-left: 59px;
     margin-right: 59px;
 }
+@media screen and (max-width: 1070px) {
+    .navigation--header {
+        display: none;
+    }
+}
+@media screen and (max-width: 1070px) {
+    .button--header {
+        display: none;
+    }
+}
 .nav-item {
     margin-right: 32px;
     text-decoration: none;
     color: #ffffff;
     cursor: pointer;
+}
+@media screen and (max-width: 1200px) {
+    .nav-item {
+        margin-right: 10px;
+    }
+}
+@media screen and (max-width: 1150px) {
+    .nav-item {
+        font-size: 14px;
+    }
 }
 .nav-item:hover {
     font-weight: 700;
@@ -100,6 +133,148 @@ h2 {
 }
 .nav-item:last-child {
     margin-right: 0;
+}
+/* Burger-menu */
+.burger-menu {
+    display: none;
+}
+@media screen and (max-width: 1070px) {
+    .burger-menu {
+        display: block;
+    }
+}
+#menu__toggle {
+    opacity: 0;
+}
+.menu__btn {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    right: -90%;
+    bottom: 3em;
+    width: 30px;
+    height: 50px;
+    cursor: pointer;
+    z-index: 30;
+}
+
+.menu__btn span,
+.menu__btn span::before,
+.menu__btn span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    z-index: 30;
+}
+.menu__btn span::before {
+    content: "";
+    top: -5px;
+}
+.menu__btn span::after {
+    content: "";
+    top: 5px;
+}
+.menu__box {
+    display: block;
+    position: fixed;
+    overflow: hidden;
+    visibility: hidden;
+    top: 0;
+    width: 40%;
+    height: 80%;
+    margin: 0;
+    padding: 50px 0px 0px 0px;
+    text-align: center;
+    background: #ffffff;
+    border-radius: 20px;
+    text-align: center;
+    z-index:20;
+}
+@media screen and (max-width: 550px) {
+    .menu__box{
+        height: 70%;
+        width: 70%;
+    }
+}
+.menu__item {
+    display: block;
+    padding: 10px 0px;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 100%;
+    color: #595e64;
+    text-decoration: none;
+}
+@media screen and (max-width: 750px) {
+    .menu__item {
+        font-size: 18px;
+        line-height: 20px;
+    }
+}
+.menu__item:hover {
+    color: hsl(248, 38%, 55%);
+}
+.menu__item-btn {
+    font-weight: 700;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    font-weight: normal;
+    line-height: 148%;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: hsl(248, 38%, 55%);
+    border-radius: 60px;
+    padding: 20px 50px;
+    border: none;
+    cursor: pointer;
+}
+@media screen and (max-width: 750px) {
+    .menu__item-btn {
+        font-size: 15px;
+        line-height: 20px;
+        padding: 10px 30px;
+    }
+}
+@media screen and (max-width: 440px){
+    .menu__item-btn {
+        font-size: 15px;
+        padding: 10px 15px;
+    }
+}
+@media screen and (max-width: 350px){
+    .menu__item-btn {
+        font-size: 14px;
+        padding: 5px 7px 5px 2px;
+    }
+}
+.menu__item-btn::before {
+    content: url(/img/arrow-burger.svg);
+    margin-right: 9.36px;
+}
+.item-btn {
+    position: relative;
+    top: 20%;
+}
+#menu__toggle:checked ~ .menu__btn span {
+    transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn span::before {
+    top: 0;
+    transform: rotate(0);
+    background-color: hsl(248, 38%, 55%);
+}
+#menu__toggle:checked ~ .menu__btn span::after {
+    top: 0;
+    transform: rotate(90deg);
+    background-color: hsl(248, 38%, 55%);
+}
+#menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    right: 0;
 }
 /* Main */
 .main {
@@ -115,6 +290,27 @@ h2 {
     color: #ffffff;
     margin-bottom: 8px;
 }
+@media screen and (max-width: 1150px) {
+    .main-title {
+        font-size: 50px;
+        line-height: 100%;
+    }
+}
+@media screen and (max-width: 870px) {
+    .main-title {
+        font-size: 35px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .main-title {
+        font-size: 25px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .main-title {
+        font-size: 20px;
+    }
+}
 .main--paragraph {
     font-weight: 400;
     font-size: 20px;
@@ -122,6 +318,19 @@ h2 {
     color: #ffffff;
     opacity: 0.8;
     margin-bottom: 41px;
+}
+@media screen and (max-width: 600px) {
+    .main--paragraph {
+        font-size: 15px;
+        line-height: 25px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .main--paragraph {
+        font-size: 13px;
+        line-height: 20px;
+        margin-bottom: 20px;
+    }
 }
 .main-img {
     max-width: 100%;
@@ -131,14 +340,35 @@ h2 {
     position: relative;
     top: 19em;
 }
+@media screen and (max-width: 1200px) {
+    .main-img {
+        max-width: 100%;
+    }
+}
+@media screen and (max-width: 1000px) {
+    .main-img {
+        top: 15em;
+    }
+}
+@media screen and (max-width: 750px) {
+    .main-img {
+        top: 6em;
+    }
+}
 /* Features */
 .features-wrapper {
     background-image: url(/img/bg-2.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: bottom;
-    margin-top: 20em;
-    margin-bottom: 185px;
+    padding-top: 20em;
+    padding-bottom: 185px;
+}
+@media screen and (max-width: 750px) {
+    .features-wrapper {
+        padding-top: 90px;
+        padding-bottom: 90px;
+    }
 }
 .paragraph--features {
     color: #00a077;
@@ -148,10 +378,37 @@ h2 {
     margin-bottom: 32px;
     width: 528px;
 }
+@media screen and (max-width: 750px) {
+    .features-title {
+        width: 100%;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 600px) {
+    .features-title {
+        font-size: 30px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .features-title {
+        font-size: 20px;
+    }
+}
 .features-cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
+}
+@media screen and (max-width: 870px) {
+    .features-cards {
+        gap: 10px;
+    }
+}
+@media screen and (max-width: 750px) {
+    .features-cards {
+        display: flex;
+        flex-direction: column;
+    }
 }
 .card {
     text-align: left;
@@ -162,14 +419,40 @@ h2 {
     box-shadow: 0px 20px 50px rgba(59, 62, 67, 0.05);
     border-radius: 15px;
 }
+@media screen and (max-width: 870px) {
+    .card {
+        max-width: 100%;
+    }
+}
+@media screen and (max-width: 750px) {
+    .card {
+        text-align: center;
+        width: 400px;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 50px 50px;
+    }
+}
+
 .card__logo {
     margin-bottom: 20px;
 }
 .card:nth-child(3) {
     margin-right: 0;
 }
+@media screen and (max-width: 750px) {
+    .card:nth-child(3) {
+        margin-right: auto;
+    }
+}
 .card:nth-child(6) {
     margin-right: 0;
+}
+@media screen and (max-width: 750px) {
+    .card:nth-child(6) {
+        margin-right: auto;
+    }
 }
 .card__title {
     margin-bottom: 15px;
@@ -178,11 +461,23 @@ h2 {
     line-height: 30px;
     color: #3b3e43;
 }
+@media screen and (max-width: 960px) {
+    .card-title {
+        font-size: 18px;
+        line-height: 20px;
+    }
+}
 .card__description {
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: #595e64;
+}
+@media screen and (max-width: 960px) {
+    .card__description {
+        font-size: 15px;
+        line-height: 20px;
+    }
 }
 /* Process */
 .process-wrapper {
@@ -194,6 +489,12 @@ h2 {
     padding-top: 194px;
     padding-bottom: 184px;
 }
+@media screen and (max-width: 750px) {
+    .process {
+        padding-top: 90px;
+        padding-bottom: 90px;
+    }
+}
 .process--paragraph {
     text-align: center;
     margin-bottom: 14px;
@@ -203,6 +504,17 @@ h2 {
     text-align: center;
     margin-bottom: 24px;
     color: #ffffff;
+}
+@media screen and (max-width: 600px) {
+    .process-title {
+        font-size: 25px;
+        margin-bottom: 10px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .process-title {
+        font-size: 20px;
+    }
 }
 .process-description {
     text-align: center;
@@ -215,6 +527,18 @@ h2 {
     line-height: 34px;
     color: #ffffff;
 }
+@media screen and (max-width: 600px) {
+    .process-description {
+        font-size: 15px;
+        line-height: 20px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .process-description {
+        font-size: 13px;
+        line-height: 20px;
+    }
+}
 .process__card {
     display: flex;
     justify-content: center;
@@ -225,6 +549,51 @@ h2 {
     border-radius: 15px;
     padding: 30px 68px 24px 26px;
     margin-bottom: 40px;
+}
+
+@media screen and (max-width: 800px) {
+    .process__card {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        padding: 30px 30px;
+    }
+}
+.card__image {
+    margin-right: 60px;
+}
+@media screen and (max-width: 1170px) {
+    .card__image {
+        max-width: 100%;
+        width: 400px;
+        margin-left: 30px;
+    }
+}
+@media screen and (max-width: 1070px) {
+    .card__image {
+        padding-left: 20px;
+        margin-right: 20px;
+        width: 300px;
+    }
+}
+@media screen and (max-width: 940px) {
+    .card__image {
+        max-width: 90%;
+        width: 230px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .card__image {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 1070px) {
+    .card__logo {
+        width: 30px;
+        margin-bottom: 5px;
+    }
 }
 .process__card:last-child {
     margin-bottom: 0;
@@ -241,6 +610,11 @@ h2 {
 .card__title {
     margin-bottom: 15px;
 }
+@media screen and (max-width: 1070px) {
+    .card__title {
+        font-size: 18px;
+    }
+}
 .process-card__description {
     width: 530px;
     font-weight: 400;
@@ -248,9 +622,27 @@ h2 {
     line-height: 24px;
     color: #595e64;
 }
+@media screen and (max-width: 1150px) {
+    .process-card__description {
+        max-width: 90%;
+    }
+}
+@media screen and (max-width: 800px) {
+    .process-card__description {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 /* Brands */
 .brands {
     padding: 184px 0 184px 0;
+}
+@media screen and (max-width: 750px) {
+    .brands {
+        padding: 90px 0 90px 0;
+    }
 }
 .brands--paragraph {
     text-align: center;
@@ -265,6 +657,22 @@ h2 {
     margin-right: auto;
     margin-bottom: 32px;
 }
+@media screen and (max-width: 960px) {
+    .brands-title {
+        width: 90%;
+    }
+}
+@media screen and (max-width: 430px) {
+    .brands-title {
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .brands-title {
+        font-size: 25px;
+        margin-bottom: 10px;
+    }
+}
 .list-companies {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -272,6 +680,30 @@ h2 {
     row-gap: 47px;
     align-items: center;
     margin-bottom: 40px;
+}
+@media screen and (max-width: 1200px) {
+    .list-companies {
+        column-gap: 80px;
+    }
+}
+@media screen and (max-width: 1150px) {
+    .list-companies {
+        column-gap: 40px;
+    }
+}
+@media screen and (max-width: 960px) {
+    .list-companies {
+        column-gap: 10px;
+    }
+}
+@media screen and (max-width: 800px) {
+    .list-companies {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
 }
 .brands-description {
     max-width: 381px;
@@ -295,8 +727,19 @@ h2 {
     align-items: center;
     padding: 114px 0 143px 0;
 }
+@media screen and (max-width: 750px) {
+    .start {
+        flex-direction: column;
+        padding: 70px 0 70px 0;
+    }
+}
 .start-content {
     text-align: left;
+}
+@media screen and (max-width: 750px) {
+    .start-content {
+        text-align: center;
+    }
 }
 .start--paragraph {
     color: #ffffff;
@@ -307,6 +750,17 @@ h2 {
     color: #ffffff;
     margin-bottom: 24px;
 }
+@media screen and (max-width: 600px) {
+    .start-title {
+        font-size: 25px;
+        margin-bottom: 10px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .start-title {
+        font-size: 20px;
+    }
+}
 .start-description {
     max-width: 400px;
     font-weight: 400;
@@ -315,6 +769,40 @@ h2 {
     color: #ffffff;
     margin-bottom: 50px;
     margin-right: 132px;
+}
+@media screen and (max-width: 750px) {
+    .start-description {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .start-description {
+        font-size: 15px;
+        line-height: 20px;
+    }
+}
+@media screen and (max-width: 430px) {
+    .start-description {
+        font-size: 13px;
+    }
+}
+@media screen and (max-width: 1150px) {
+    .start-img {
+        max-width: 90%;
+        width: 480px;
+    }
+}
+@media screen and (max-width: 870px) {
+    .start-img {
+        max-width: 90%;
+        width: 360px;
+    }
+}
+@media screen and (max-width: 750px) {
+    .start-img {
+        margin-top: 40px;
+    }
 }
 /* Footer */
 .footer-wrapper {
@@ -326,6 +814,20 @@ h2 {
     align-items: center;
     padding: 84px 0 28px 0;
 }
+@media screen and (max-width: 940px) {
+    .footer-content {
+        white-space: nowrap;
+        max-width: 100%;
+    }
+}
+@media screen and (max-width: 800px) {
+    .footer-content {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 28px 0 28px 0;
+    }
+}
 .line {
     opacity: 0.35;
     border: 1px solid #ffffff;
@@ -334,14 +836,66 @@ h2 {
     color: #ffffffcc;
     margin-right: 81px;
 }
+@media screen and (max-width: 1200px) {
+    .footer-logo {
+        margin-right: 0;
+    }
+}
+@media screen and (max-width: 940px) {
+    .footer-logo img {
+        width: 90%;
+    }
+}
+@media screen and (max-width: 800px) {
+    .footer-logo {
+        margin-bottom: 10px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .footer-logo {
+        max-width: 100%;
+        margin-bottom: 0;
+    }
+}
+@media screen and (max-width: 800px) {
+    .navigation--footer {
+        margin-bottom: 20px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .navigation--footer {
+        white-space: pre-line;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 1000px) {
+    .navigation--footer .nav-item {
+        font-size: 13px;
+    }
+}
 .navigation--footer .nav-item {
     margin-right: 32px;
+}
+@media screen and (max-width: 1200px) {
+    .navigation--footer .nav-item {
+        margin-right: 10px;
+    }
+}
+@media screen and (max-width: 550px) {
+    .navigation--footer .nav-item {
+        margin-right: 0;
+    }
 }
 .social-item {
     margin-right: 19.99px;
 }
 .social-item:last-child {
     margin-right: 0;
+}
+@media screen and (max-width: 1200px) {
+    .social-item {
+        margin-right: 10px;
+    }
 }
 .copyright {
     display: flex;
@@ -359,6 +913,12 @@ h2 {
     line-height: 20px;
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
+}
+@media screen and (max-width: 550px) {
+    .copyright-item {
+        font-size: 13px;
+        line-height: 15px;
+    }
 }
 .copyright-item:nth-child(1) {
     margin-right: 40px;
