--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h2 {
 
 /* Header */
 .wrapper-main {
-    background-image: url(/img/bg-1.png);
+    background-image: url(img/bg-1.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -357,7 +357,7 @@ h2 {
 }
 /* Features */
 .features-wrapper {
-    background-image: url(/img/bg-2.png);
+    background-image: url(img/bg-2.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: bottom;
@@ -481,7 +481,7 @@ h2 {
 }
 /* Process */
 .process-wrapper {
-    background-image: url(/img/bg-3.png);
+    background-image: url(img/bg-3.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -717,7 +717,7 @@ h2 {
 }
 /* Start */
 .start-wrapper {
-    background-image: url(/img/bg-4.png);
+    background-image: url(img/bg-4.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
