--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ h2 {
     display: flex;
     justify-content: center;
     position: relative;
-    right: -90%;
+    right: -85%;
     bottom: 3em;
     width: 30px;
     height: 50px;
@@ -191,10 +191,10 @@ h2 {
     background: #ffffff;
     border-radius: 20px;
     text-align: center;
-    z-index:20;
+    z-index: 20;
 }
 @media screen and (max-width: 550px) {
-    .menu__box{
+    .menu__box {
         height: 70%;
         width: 70%;
     }
@@ -239,13 +239,13 @@ h2 {
         padding: 10px 30px;
     }
 }
-@media screen and (max-width: 440px){
+@media screen and (max-width: 440px) {
     .menu__item-btn {
         font-size: 15px;
         padding: 10px 15px;
     }
 }
-@media screen and (max-width: 350px){
+@media screen and (max-width: 350px) {
     .menu__item-btn {
         font-size: 14px;
         padding: 5px 7px 5px 2px;
@@ -309,8 +309,10 @@ h2 {
 @media screen and (max-width: 430px) {
     .main-title {
         font-size: 20px;
+        text-align: center;
     }
 }
+
 .main--paragraph {
     font-weight: 400;
     font-size: 20px;
@@ -330,6 +332,7 @@ h2 {
         font-size: 13px;
         line-height: 20px;
         margin-bottom: 20px;
+        text-align: center;
     }
 }
 .main-img {
