--- a/style.css
+++ b/style.css
@@ -46,7 +46,9 @@ body {
     cursor: pointer;
 }
 .button:hover {
-    transform: scale(1.2);
+    background-color: #5351da;
+    color: #ffffff;
+    transition: all 0.3s;
 }
 @media screen and (max-width: 1100px) {
     .button {
@@ -110,10 +112,12 @@ h2 {
     }
 }
 .nav-item {
+    display: inline-block;
     margin-right: 32px;
     text-decoration: none;
     color: #ffffff;
     cursor: pointer;
+    transition: font-weight .3s;
 }
 @media screen and (max-width: 1200px) {
     .nav-item {
@@ -125,9 +129,9 @@ h2 {
         font-size: 14px;
     }
 }
-.nav-item:hover {
-    font-weight: 700;
-    transition: all 0.5s;
+.nav-item:hover{
+    text-shadow: 0.25px 0.3px 0px rgb(255, 255, 255), -0.25px -0.2px 0px rgb(255, 255, 255);
+    transition: ease-in-out 0.3s;
 }
 .nav-item:last-child {
     margin-right: 0;
