--- a/style.css
+++ b/style.css
@@ -146,13 +146,13 @@ h2 {
     }
 }
 #menu__toggle {
-    opacity: 0;
+    position: absolute;
+    display: none;
 }
 .menu__btn {
-    display: flex;
-    justify-content: center;
+    display: block;
     position: relative;
-    right: -85%;
+    right: -87%;
     bottom: 3em;
     width: 30px;
     height: 50px;
@@ -170,6 +170,7 @@ h2 {
     background-color: #ffffff;
     border-radius: 10px;
     z-index: 30;
+    transition: ease-in-out 0.3s;
 }
 .menu__btn span::before {
     content: "";
@@ -181,7 +182,7 @@ h2 {
 }
 .menu__box {
     display: block;
-    position: fixed;
+    position: absolute;
     overflow: hidden;
     visibility: hidden;
     top: 0;
@@ -195,10 +196,10 @@ h2 {
     text-align: center;
     z-index: 20;
 }
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 9120px) {
     .menu__box {
-        height: 70%;
-        width: 70%;
+        height: 40%;
+        width: 60%;
     }
 }
 .menu__item {
@@ -228,7 +229,7 @@ h2 {
     text-decoration: none;
     text-transform: uppercase;
     color: #ffffff;
-    background: hsl(248, 38%, 55%);
+    background: #5351da;
     border-radius: 60px;
     padding: 20px 50px;
     border: none;
@@ -250,7 +251,6 @@ h2 {
 @media screen and (max-width: 350px) {
     .menu__item-btn {
         font-size: 14px;
-        padding: 5px 7px 5px 2px;
     }
 }
 .menu__item-btn::before {
