--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ h2 {
 }
 /* Features */
 .features-wrapper {
-    background-image: url(img/bg-2.jpg);
+    background-image: url(img/bg-2.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: bottom;
