--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h2 {
 
 /* Header */
 .wrapper-main {
-    background-image: url(img/bg-1.jpg);
+    background-image: url(img/bg-1-min.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
